# AI-Bid-Assistant

./: .env.example  .env.local.example  .gitignore  AGENT_DESIGN_REVIEW.md  AGENT_IMPROVEMENT_PLAN.md  ARCHITECTURE.md  CODE_CLEANUP_SUMMARY.md  CODE_OPTIMIZATION_PHASE2.md  CODE_REVIEW_REPORT.md  DELIVERABLES_SUMMARY.md  DOCUMENTATION_CLEANUP_PLAN.md  Dockerfile  EXECUTIVE_SUMMARY.md  FINAL_CHECKLIST.md  FINAL_PROJECT_SUMMARY.md  FRONTEND_BACKEND_INTEGRATION_SUMMARY.md  FRONTEND_LLM_CONFIG_GUIDE.md  IMPLEMENTATION_COMPLETE_FINAL.md  IMPLEMENTATION_PROGRESS.md  LLM_IMPLEMENTATION_SUMMARY.md  OCR_TESTING.md  OPTIMIZATION_COMPLETE.md  PRODUCTION_DEPLOYMENT_SUMMARY.md  PROJECT_CLEANUP_SUMMARY.md  PROJECT_OPTIMIZATION_SUMMARY.md  QUICK_REFERENCE.md  README.md  READY_FOR_TESTING.md  SCRIPT_FIX_SUMMARY.md  SECURITY_AND_CONFIGURATION_GUIDE.md  SECURITY_REVIEW_SUMMARY.md  check-demo-data.js  check-dependencies.sh  complete-setup.sh  comprehensive_test.py  create-demo-data.js  docker-compose.dev.yml  docker-compose.prod.yml  next.config.mjs  package-lock.json  (+8 more)
.history/: .env_20251005103221.example  .env_20251005103230  .env_20251006173447  .env_20251006174530  .env_20251006211925.example  .env_20251007105113  .env_20251007165615.example  .env_20251007165622  .env_20251008181533  .gitignore_20251009101900  comprehensive_test_20251009162036.py  comprehensive_test_20251009162434.py  comprehensive_test_20251009162513.py  comprehensive_test_20251009162600.py  fix-issues_20251007124139.sh  server_20251006223948.js  start-database_20251007124139.sh  start-database_20251009103441.sh  (+6 more)
(+733 files in other folders)
